--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,17 @@
     <style>
         /* This helps the ng-show/ng-hide animations start at the right place. */
         /* Since Angular has this but needs to load, this gives us the class early. */
-        .ng-hide { display: none!important; }
+        .ng-hide {
+            display: none !important;
+        }
     </style>
     <meta charset="utf-8">
     <title ng-bind="title">Computer Database</title>
     <meta name="description" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-    <link rel="icon" type="image/png" href="resources/images/favicon.png?v=2" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
+    <link rel="icon" type="image/png" href="resources/images/favicon.png?v=2"/>
     <!-- build:css({.tmp,src}) styles/vendor.css -->
     <!-- bower:css -->
     <!-- run `gulp style` to automatically populate bower styles here -->
@@ -28,6 +31,19 @@
     <!-- endbuild -->
 </head>
 <body ng-app="app">
+
+<header class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="${context}/dashboard">Application - Computer Database</a>
+    </div>
+</header>
+
+<ui-view></ui-view>
+
+<footer class="navbar-fixed-bottom">
+    <div class="container text-center">
+    </div>
+</footer>
 
 <!-- build:js({.tmp,src}) scripts/vendor.js -->
 <!-- bower:js -->
@@ -47,6 +63,5 @@
 <!-- endinject -->
 <!-- endbuild -->
 
-<ui-view></ui-view>
 </body>
 </html>
