[feature] Pagination is fully implemented

--- a/src/index.html
+++ b/src/index.html
@@ -34,16 +34,11 @@
 
 <header class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="${context}/dashboard">Application - Computer Database</a>
+        <a class="navbar-brand" href="/dashboard">Application - Computer Database</a>
     </div>
 </header>
 
 <ui-view></ui-view>
-
-<footer class="navbar-fixed-bottom">
-    <div class="container text-center">
-    </div>
-</footer>
 
 <!-- build:js({.tmp,src}) scripts/vendor.js -->
 <!-- bower:js -->
